<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_de_calculs"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNbOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:importantForAutofill="no" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxAddition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="167dp" />

        <CheckBox
            android:id="@+id/checkBoxSoustraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soustraction"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="232dp"
            tools:layout_editor_absoluteY="207dp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_du_rapport"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nouvelle_partie"
            android:onClick="onNouvellePartie"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="300dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>